--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,6 +24,8 @@
 #    and best practices on handling the access key credentials.
 
 on:
+  pull_request:
+    branches: [ main ]
   release:
     types: [created]
 
