--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -78,6 +78,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: algodex-go-lb
+        service: algodex-go-svc
         cluster: algodex
         wait-for-service-stability: true
