--- a/.github/workflows/aws-test.yml
+++ b/.github/workflows/aws-test.yml
@@ -25,9 +25,9 @@
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ development ]
+#  pull_request:
+#    branches: [ main ]
 #  release:
 #    types: [created]
 
@@ -72,7 +72,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
+        task-definition: ecs/test-task-definition.json
         container-name: algodex-go
         image: ${{ steps.build-image.outputs.image }}
 
