Add sentry support including some test transaction/span tests (currently at 100% sample rate)

--- a/.github/workflows/aws-public-test.yml
+++ b/.github/workflows/aws-public-test.yml
@@ -52,7 +52,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: dev
+    environment: public-test
 
     steps:
     - name: Checkout
